Bug 241961 - [GTK][WPE] Unreviewed GPUProcess build fixes
Summary: [GTK][WPE] Unreviewed GPUProcess build fixes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Zan Dobersek (Reviews)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-24 02:52 PDT by Zan Dobersek
Modified: 2022-06-24 03:42 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zan Dobersek 2022-06-24 02:52:25 PDT
A few changes to get things building again.
Comment 1 Zan Dobersek 2022-06-24 02:57:25 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1770
Comment 2 EWS 2022-06-24 03:41:38 PDT
Committed 251826@main (b9288e3b242c): <https://commits.webkit.org/251826@main>

Reviewed commits have been landed. Closing PR #1770 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-06-24 03:42:13 PDT
<rdar://problem/95844448>