[GTK][WPE] Unreviewed GPUProcess build fixes https://bugs.webkit.org/show_bug.cgi?id=241961

Unreviewed build fixes for ENABLE(GPU_PROCESS) on GTK and WPE ports.

* Source/WebKit/GPUProcess/GPUProcess.cpp:
(WebKit::GPUProcess::updateGPUProcessPreferences): Add the ENABLE(VP9) guard to
match the guards around GPUProcessPreferences::webMParserEnabled declaration.
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.cpp:
Add a missing GraphicsContext header include.

Canonical link: https://commits.webkit.org/251826@main